package org.example;

import java.time.LocalDate;

public class PoliticaCancelacionEstricta implements IPoliticaCancelacion{
    public PoliticaCancelacionEstricta(){

    }

    public double montoAReembolsar(LocalDate fechaCancelacion, double monto, LocalDate fechaReserva){
        return 0;
    }
}
